@@ -1,4 +1,4 @@
 DIST KontrolPack-2.0.2-src.zip 575392 RMD160 b461a2196c4c62880cc90bc326c7457fd11af855 SHA1 9e63f115562b99041ab1ec6da96ccfa9b0f181dc SHA256 0f2d5942a912e225e872b28fc3ce057831b48265fadaebf766298a3d7b4efcc9
-EBUILD kontrolpack-2.0.2.ebuild 631 RMD160 f5e1a83e7fc6c630e9959da650aea618c3050819 SHA1 79a5e0610ce81a345d1863f2a5fcd3fcb356ca1a SHA256 a836fb2579da41cfa5d1a807bc43064957d7fe64dfe2eb60e3ea62820bb2931e
-MISC ChangeLog 261 RMD160 94131000efe2e567dd0e4edddcfeae01f3b3d15a SHA1 d1c8bf2b33173d5e5fd0531d149768dd8ed81f54 SHA256 fbce09f4c51c1bce1b5fb720ea2b3f5b6ce11914d354a640051c68f6e9c5d51f
+EBUILD kontrolpack-2.0.2.ebuild 930 RMD160 da51d296fc6a880ced8620fdd21bd6bdfcf43aec SHA1 63fded89b2b0ab4a81147c0f304de157aed477c9 SHA256 cbd8020a46a26518d42c8d1cb2025e205ea957a119d4d26db617233d5d82c9f5
+MISC ChangeLog 348 RMD160 2904d8a0024003d0d2c32f210ace0009ffce3a90 SHA1 f362a1ee9e0ca01ee0e65dcbcf7ff321c5a1b9c2 SHA256 a969e09634c966b2ba84a9c22e41b2e80a3b20b3b3eca8f4600e4d2d7b1c45fc
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
