@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jul 2009; Dominik Kapusta <d@ayoy.net> kontrolpack-2.0.2.ebuild:
+  Added LINGUAS
+
 *kontrolpack-2.0.2 (21 Jul 2009)
 
   21 Jul 2009; Dominik Kapusta <d@ayoy.net> +kontrolpack-2.0.2.ebuild,
